# createPatch

./: CMakeLists.txt  Computing.cpp  Computing.h  Patch.cpp  Patch.h  README.md  main.cpp
